<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/login_tip"
            android:textSize="20sp"
            android:textColor="#cccccccc"/>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView 
                android:id="@+id/login"
                android:layout_width="0dip"
            	android:layout_height="wrap_content"
            	android:layout_weight="1"
            	android:text="@string/login"
            	android:gravity="center"
            	android:background="@drawable/login_register_border_nor"
            	android:padding="10dip"
            	android:layout_margin="25dip"
            	android:textSize="16sp"/>
            <TextView 
                android:id="@+id/register"
                android:layout_width="0dip"
            	android:layout_height="wrap_content"
            	android:layout_weight="1"
            	android:text="@string/register"
            	android:gravity="center"
            	android:background="@drawable/login_register_border_nor"
            	android:padding="10dip"
            	android:layout_margin="25dip"
            	android:textSize="16sp"/>
        </LinearLayout>

</LinearLayout>
