<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="0dip"
	    android:layout_weight="1"
	    android:background="@drawable/personality_bg">
	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:padding="25dip">
	        <ImageView 
	        android:id="@+id/personality_head_picture"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:background="@drawable/head_default_picture"/>
	        <TextView 
	            android:id="@+id/account_username"
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:text="@string/pleaselogin"
	        	android:layout_alignBottom="@id/personality_head_picture"
	        	android:layout_toRightOf="@id/personality_head_picture"
	        	android:layout_marginLeft="10dip"
	        	android:textSize="18sp"
	        	android:textColor="#fff8f8"/>
	        <TextView
	            android:id="@+id/account_exit"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignBottom="@id/personality_head_picture"
	            android:textSize="18sp"
	            android:layout_alignParentRight="true"
	            android:textColor="#fff8f8"/>
	    </RelativeLayout>
	</RelativeLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="0dip"
	    android:layout_weight="2"
	    android:orientation="vertical">
	    <ScrollView 
	        android:layout_width="match_parent"
	        android:layout_height="match_parent">
	        <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:orientation="vertical">
	        <LinearLayout 
	        android:id="@+id/myfocus_button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:paddingLeft="20dip"
	        android:paddingTop="10dip"
	        android:paddingBottom="10dip"
	        android:layout_marginTop="10dip"
	        android:layout_marginBottom="10dip"
	        android:background="@drawable/item_bg_nor">
	        <TextView 
	            android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:text="@string/myfocus"
	        	android:textSize="18sp"/>
		    </LinearLayout>
		    <LinearLayout 
		        android:id="@+id/focusme_button"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:paddingLeft="20dip"
		        android:paddingTop="10dip"
		        android:paddingBottom="10dip"
		        android:layout_marginBottom="10dip"
		        android:background="@drawable/item_bg_nor">
		        <TextView 
		            android:layout_width="match_parent"
		        	android:layout_height="wrap_content"
		        	android:text="@string/focusme"
		        	android:textSize="18sp"/>
			    </LinearLayout>
			    <LinearLayout 
			        android:id="@+id/message_button"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:orientation="horizontal"
			        android:paddingLeft="20dip"
			        android:paddingTop="10dip"
			        android:paddingBottom="10dip"
			        android:layout_marginBottom="10dip"
			        android:background="@drawable/item_bg_nor">
			        <TextView 
			            android:layout_width="match_parent"
			        	android:layout_height="wrap_content"
			        	android:text="@string/message"
			        	android:textSize="18sp"/>
			    </LinearLayout>
	        </LinearLayout>
	    </ScrollView>
	</LinearLayout>
</LinearLayout>
