<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
	<TabHost
	    android:id="@+id/tabhost"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:orientation="vertical">
	        <FrameLayout
	            android:id="@android:id/tabcontent"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:layout_weight="1000">
	            <LinearLayout
	                android:id="@+id/tab1"
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:orientation="vertical">
	                <RelativeLayout
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:paddingTop="12dip"
		                android:paddingBottom="12dip"
		                android:background="#148af7">
	                    <TextView
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:text="@string/today"
	                        android:textColor="#ffffff"
	                        android:layout_centerInParent="true"
	                        android:textSize="18sp" />
		                <ImageView 
		                    android:id="@+id/show_slidingmenu"
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:layout_alignParentRight="true"
		                    android:background="@drawable/slidemenu"
		                    android:layout_marginRight="20dip"/>
	            	</RelativeLayout>
	            </LinearLayout>
	            <LinearLayout
	                android:id="@+id/tab2"
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:orientation="vertical">
	                <LinearLayout 
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:orientation="vertical"
		                android:paddingTop="12dip"
		                android:paddingBottom="12dip"
		                android:background="#148af7">
		                <TextView
		                    android:layout_width="match_parent"
		                    android:layout_height="wrap_content"
		                    android:gravity="center"
		                    android:textColor="#ffffff"
		                    android:textSize="18sp"
		                    android:text="@string/memorandum"/>
		            </LinearLayout>
	            </LinearLayout>
	            <LinearLayout
	                android:id="@+id/tab3"
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:orientation="vertical">
	                <LinearLayout 
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:orientation="vertical"
		                android:paddingTop="12dip"
		                android:paddingBottom="12dip"
		                android:background="#148af7">
		                <TextView
		                    android:layout_width="match_parent"
		                    android:layout_height="wrap_content"
		                    android:gravity="center"
		                    android:textColor="#ffffff"
		                    android:textSize="18sp"
		                    android:text="@string/write"/>
		            </LinearLayout>
	            </LinearLayout>
	            <LinearLayout
	                android:id="@+id/tab4"
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:orientation="vertical">
	                <LinearLayout 
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:orientation="vertical"
		                android:paddingTop="12dip"
		                android:paddingBottom="12dip"
		                android:background="#148af7">
		                <TextView
		                    android:layout_width="match_parent"
		                    android:layout_height="wrap_content"
		                    android:gravity="center"
		                    android:textColor="#ffffff"
		                    android:textSize="18sp"
		                    android:text="@string/dynamic"/>
		            </LinearLayout>
	            </LinearLayout>
	            <LinearLayout
	                android:id="@+id/tab5"
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:orientation="vertical">
	                <LinearLayout 
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:orientation="vertical"
		                android:paddingTop="12dip"
		                android:paddingBottom="12dip"
		                android:background="#148af7">
		                <TextView
		                    android:layout_width="match_parent"
		                    android:layout_height="wrap_content"
		                    android:gravity="center"
		                    android:textColor="#ffffff"
		                    android:textSize="18sp"
		                    android:text="@string/personality"/>
		            </LinearLayout>
	            </LinearLayout>
	        </FrameLayout>
	        
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical">
	            <ImageView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center"
	                android:background="@drawable/icon_edit_top"/>
	            <TextView 
	                android:layout_width="match_parent"
		            android:layout_height="1dip"
		            android:background="#cccccc"
		            android:layout_marginBottom="2dip"/>
	            <TabWidget 
		            android:id="@android:id/tabs"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:showDividers="none">
		        </TabWidget>
	        </LinearLayout>
	    </LinearLayout>
	</TabHost>
	<LinearLayout
	    android:id="@+id/head_picture_layout"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" 
	    android:gravity="center"
	    android:layout_marginTop="-230dip"
	    android:visibility="invisible">
	    <TextView 
	        android:id="@+id/takephoto_button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/takephoto"
	        android:textSize="20sp"
	        android:gravity="center"
	        android:padding="10dip"
	        android:layout_marginTop="20dip"
	        android:layout_marginRight="20dip"
	        android:layout_marginBottom="10dip"
	        android:layout_marginLeft="20dip"
	        android:background="@drawable/upload_picture_bg_nor"/>
		    <TextView 
		        android:id="@+id/localpicture_button"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/localpicture"
		        android:textSize="20sp"
		        android:gravity="center"
		        android:padding="10dip"
		        android:layout_marginTop="10dip"
		        android:layout_marginRight="20dip"
		        android:layout_marginBottom="10dip"
		        android:layout_marginLeft="20dip"
		        android:background="@drawable/upload_picture_bg_nor"/>
	</LinearLayout>
</LinearLayout>
