<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dip"
        android:paddingBottom="12dip"
        android:background="#148af7">
        <ImageView 
            android:id="@+id/write_one_write_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/navigationbar_back"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dip"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:text="@string/write"/>
        <TextView 
            android:id="@+id/text_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="18sp"
            android:textColor="#ffffff"
            android:layout_marginRight="10dip"/>
    </RelativeLayout>
    <FrameLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent">
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:orientation="vertical">
	        <EditText 
	        android:id="@+id/text_edit"
	        android:layout_width="match_parent"
	    	android:layout_height="0dip"
	    	android:layout_weight="3"
	    	android:layout_marginTop="15dip"
	    	android:layout_marginRight="10dip"
	    	android:layout_marginLeft="10dip"
	    	android:paddingLeft="10dip"
	    	android:paddingTop="10dip"
	    	android:paddingRight="10dip"
	    	android:inputType="textMultiLine"
	    	android:gravity="top|left"
	    	android:background="@drawable/text_input_bg"/>
		    <LinearLayout 
		        android:layout_width="match_parent"
		    	android:layout_height="0dip"
		    	android:layout_weight="2"
		    	android:orientation="horizontal"
		    	android:gravity="center">
		    </LinearLayout>
	    </LinearLayout>
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:id="@+id/permission_bg"
	        android:orientation="vertical"
	        android:background="#55000000">
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:orientation="vertical">
	        <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="0dip"
	            android:layout_weight="1">
	        </LinearLayout>
	        <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="0dip"
	            android:layout_weight="3"
	            android:orientation="horizontal">
	            <TextView 
	                android:layout_width="0dip"
	                android:layout_height="match_parent"
	                android:layout_weight="1"/>
	            <LinearLayout
	                android:id="@+id/permission_setting" 
	                android:layout_width="0dip"
	                android:layout_height="match_parent"
	                android:layout_weight="2"
	                android:orientation="vertical"
	                android:background="@drawable/permission_select_bg">
	                <LinearLayout 
	                    android:layout_width="match_parent"
	                    android:layout_height="0dip"
	                    android:layout_weight="1"
	                    android:orientation="vertical">
	                    <TextView
	                        android:layout_width="match_parent"
	                        android:layout_height="match_parent"
	                        android:layout_weight="1000"
	                        android:gravity="center"
	                        android:text="@string/permission_tip"
	                        android:textSize="20sp"/>
	                    <TextView 
	                        android:layout_width="match_parent"
	                        android:layout_height="1dip"
	                        android:background="#d4d3d3"/>
	                </LinearLayout>
	                <LinearLayout 
	                    android:layout_width="match_parent"
	                    android:layout_height="0dip"
	                    android:layout_weight="1"
	                    android:orientation="vertical">
	                    <TextView
	                        android:id="@+id/permission_personally"
	                        android:layout_width="match_parent"
	                        android:layout_height="match_parent"
	                        android:layout_weight="1000"
	                        android:gravity="center"
	                        android:text="@string/personally"
	                        android:textSize="18sp"/>
	                    <TextView 
	                        android:layout_width="match_parent"
	                        android:layout_height="1dip"
	                        android:background="#d4d3d3"/>
	                </LinearLayout>
	                <LinearLayout 
	                    android:layout_width="match_parent"
	                    android:layout_height="0dip"
	                    android:layout_weight="1"
	                    android:orientation="vertical">
	                    <TextView
	                        android:id="@+id/permission_friendly"
	                        android:layout_width="match_parent"
	                        android:layout_height="match_parent"
	                        android:layout_weight="1000"
	                        android:gravity="center"
	                        android:text="@string/friendlly"
	                        android:textSize="18sp"/>
	                    <TextView 
	                        android:layout_width="match_parent"
	                        android:layout_height="1dip"
	                        android:background="#d4d3d3"/>
	                </LinearLayout>
	                <TextView 
	                    android:id="@+id/permission_common"
	                    android:layout_width="match_parent"
	                    android:layout_height="0dip"
	                    android:layout_weight="1"
	                    android:text="@string/common"
	                    android:gravity="center"
	                    android:textSize="18sp"/>
	            </LinearLayout>
	            <TextView 
	                android:layout_width="0dip"
	                android:layout_height="match_parent"
	                android:layout_weight="1"/>
	        </LinearLayout>
	        <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="0dip"
	            android:layout_weight="2">
	        </LinearLayout>
	    </LinearLayout>
    </FrameLayout>
</LinearLayout>
