<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
     <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dip"
        android:paddingBottom="12dip"
        android:background="#148af7">
        <ImageView 
            android:id="@+id/add_memorandum_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/navigationbar_back"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dip"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:text="@string/add_memorandum"
            android:layout_centerInParent="true"/>
        <TextView 
            android:id="@+id/add_memorandum_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="18sp"
            android:textColor="#ffffff"
            android:layout_marginRight="10dip"/>
    </RelativeLayout>
    <FrameLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:orientation="vertical">
	        <EditText 
	        android:id="@+id/memorandum_edit"
	        android:layout_width="match_parent"
	    	android:layout_height="0dip"
	    	android:layout_weight="1"
	    	android:layout_marginTop="15dip"
	    	android:layout_marginRight="10dip"
	    	android:layout_marginLeft="10dip"
	    	android:paddingLeft="10dip"
	    	android:paddingTop="10dip"
	    	android:paddingRight="10dip"
	    	android:inputType="textMultiLine"
	    	android:gravity="top|left"
	    	android:background="@drawable/text_input_bg"/>
			<TextView 
			    android:layout_width="match_parent"
		    	android:layout_height="0dip"
		    	android:layout_weight="1"/>
	    </LinearLayout>
	    <LinearLayout
	        android:id="@+id/memorandum_bg"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:orientation="vertical"
	        android:background="#55000000">
	    </LinearLayout>
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:orientation="vertical"
	        android:gravity="center">
	        <LinearLayout 
	        android:id="@+id/memorandum_timepicker_layout"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:background="@drawable/permission_select_bg">
			<TimePicker 
			    android:id="@+id/memorandum_timepicker"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"/>
	        <LinearLayout 
	            android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:orientation="horizontal"
	        	android:padding="10dip">
	            <TextView 
	                android:id="@+id/timepicker_no"
	                android:layout_width="0dip"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:text="@string/no"
	                android:textSize="18sp"
	                android:gravity="center"
	                android:padding="5dip"
	                android:layout_marginLeft="5dip"
                	android:layout_marginRight="5dip"/>
		            <TextView 
		                android:layout_width="1dip"
		                android:layout_height="match_parent"
		                android:background="#cccccc"/>
		            <TextView 
		                android:id="@+id/timepicker_yes"
		                android:layout_width="0dip"
		                android:layout_height="wrap_content"
		                android:layout_weight="1"
		                android:text="@string/yes"
		                android:textSize="18sp"
		                android:gravity="center"
		                android:padding="5dip"
	                	android:layout_marginLeft="5dip"
	                	android:layout_marginRight="5dip"/>
		        </LinearLayout>
			    </LinearLayout>
	    </LinearLayout>
    </FrameLayout>	
</LinearLayout>
