<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#191f24">
    
	<TextView 
	    android:layout_width="match_parent"
	    android:layout_height="0dip"
	    android:layout_weight="1"/>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="0dip"
	    android:layout_weight="3"
	    android:orientation="vertical">
	    <RelativeLayout 
	        android:id="@+id/menu_settings"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="10dip"
	        android:paddingLeft="20dip"
	        android:paddingRight="10dip"
	        android:paddingBottom="10dip">
	        <ImageView 
	            android:id="@+id/menu_settings_iv"
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:background="@drawable/menu_setting"
	        	android:layout_centerVertical="true"/>
	        <TextView 
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:text="@string/settings"
	        	android:layout_toRightOf="@id/menu_settings_iv"
	        	android:textColor="#ccffffff"
	        	android:layout_centerVertical="true"
	        	android:textSize="20sp"
	        	android:layout_marginLeft="10dip"/>
	        <ImageView
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:background="@drawable/to_right"
	        	android:layout_alignParentRight="true"
	        	android:layout_centerVertical="true"/>
	    </RelativeLayout>
	    <RelativeLayout
	        android:id="@+id/menu_update" 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="10dip"
	        android:paddingLeft="20dip"
	        android:paddingRight="10dip"
	        android:paddingBottom="10dip">
	        <ImageView 
	            android:id="@+id/menu_update_iv"
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:background="@drawable/menu_update"
	        	android:layout_centerVertical="true"/>
	        <TextView 
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:text="@string/update"
	        	android:layout_toRightOf="@id/menu_update_iv"
	        	android:textColor="#ccffffff"
	        	android:layout_centerVertical="true"
	        	android:textSize="20sp"
	        	android:layout_marginLeft="10dip"/>
	        <ImageView
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:background="@drawable/to_right"
	        	android:layout_alignParentRight="true"
	        	android:layout_centerVertical="true"/>
	    </RelativeLayout>
	    <RelativeLayout
	        android:id="@+id/menu_share" 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="10dip"
	        android:paddingLeft="20dip"
	        android:paddingRight="10dip"
	        android:paddingBottom="10dip">
	        <ImageView 
	            android:id="@+id/menu_share_iv"
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:background="@drawable/menu_share"
	        	android:layout_centerVertical="true"/>
	        <TextView 
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:text="@string/share"
	        	android:layout_toRightOf="@id/menu_share_iv"
	        	android:textColor="#ccffffff"
	        	android:layout_centerVertical="true"
	        	android:textSize="20sp"
	        	android:layout_marginLeft="10dip"/>
	        <ImageView
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:background="@drawable/to_right"
	        	android:layout_alignParentRight="true"
	        	android:layout_centerVertical="true"/>
	    </RelativeLayout>
	    <RelativeLayout
	        android:id="@+id/menu_help" 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="10dip"
	        android:paddingLeft="20dip"
	        android:paddingRight="10dip"
	        android:paddingBottom="10dip">
	        <ImageView 
	            android:id="@+id/menu_help_iv"
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:background="@drawable/menu_help"
	        	android:layout_centerVertical="true"/>
	        <TextView 
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:text="@string/help"
	        	android:layout_toRightOf="@id/menu_help_iv"
	        	android:textColor="#ccffffff"
	        	android:layout_centerVertical="true"
	        	android:textSize="20sp"
	        	android:layout_marginLeft="10dip"/>
	        <ImageView
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:background="@drawable/to_right"
	        	android:layout_alignParentRight="true"
	        	android:layout_centerVertical="true"/>
	    </RelativeLayout>
	    <RelativeLayout 
	        android:id="@+id/menu_about"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="10dip"
	        android:paddingLeft="20dip"
	        android:paddingRight="10dip"
	        android:paddingBottom="10dip">
	        <ImageView 
	            android:id="@+id/menu_about_iv"
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:background="@drawable/menu_about"
	        	android:layout_centerVertical="true"/>
	        <TextView 
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:text="@string/about"
	        	android:layout_toRightOf="@id/menu_about_iv"
	        	android:textColor="#ccffffff"
	        	android:layout_centerVertical="true"
	        	android:textSize="20sp"
	        	android:layout_marginLeft="10dip"/>
	        <ImageView
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:background="@drawable/to_right"
	        	android:layout_alignParentRight="true"
	        	android:layout_centerVertical="true"/>
	    </RelativeLayout>
	</LinearLayout>
	<TextView 
	    android:layout_width="match_parent"
	    android:layout_height="0dip"
	    android:layout_weight="1"/>
</LinearLayout>
